--- a/public/bower.json
+++ b/public/bower.json
@@ -16,6 +16,7 @@
     "tests"
   ],
   "dependencies": {
+    "iron-input": "PolymerElements/iron-input#~1.0.6",
     "polymer": "Polymer/polymer#^1.1.0"
   }
 }
