--- a/public/bower.json
+++ b/public/bower.json
@@ -16,7 +16,14 @@
     "tests"
   ],
   "dependencies": {
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#~1.0.3",
+    "iron-icons": "PolymerElements/iron-icons#~1.0.3",
     "iron-input": "PolymerElements/iron-input#~1.0.6",
+    "iron-pages": "PolymerElements/iron-pages#~1.0.3",
+    "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
+    "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.3",
+    "paper-tabs": "PolymerElements/paper-tabs#~1.0.3",
+    "paper-toolbar": "PolymerElements/paper-toolbar#~1.0.4",
     "polymer": "Polymer/polymer#^1.1.0"
   }
 }
