--- a/public/bower.json
+++ b/public/bower.json
@@ -17,11 +17,17 @@
   ],
   "dependencies": {
     "iron-flex-layout": "PolymerElements/iron-flex-layout#~1.0.3",
+    "iron-form": "PolymerElements/iron-form#~1.0.9",
     "iron-icons": "PolymerElements/iron-icons#~1.0.3",
     "iron-input": "PolymerElements/iron-input#~1.0.6",
     "iron-pages": "PolymerElements/iron-pages#~1.0.3",
+    "paper-button": "PolymerElements/paper-button#~1.0.6",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#~1.0.2",
     "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.3",
+    "paper-input": "PolymerElements/paper-input#~1.0.14",
+    "paper-item": "PolymerElements/paper-item#~1.0.3",
+    "paper-menu": "PolymerElements/paper-menu#~1.1.0",
     "paper-tabs": "PolymerElements/paper-tabs#~1.0.3",
     "paper-toolbar": "PolymerElements/paper-toolbar#~1.0.4",
     "polymer": "Polymer/polymer#^1.1.0"
