--- a/public/bower.json
+++ b/public/bower.json
@@ -16,10 +16,12 @@
     "tests"
   ],
   "dependencies": {
+    "iron-ajax": "PolymerElements/iron-ajax#~1.0.5",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#~1.0.3",
     "iron-form": "PolymerElements/iron-form#~1.0.9",
     "iron-icons": "PolymerElements/iron-icons#~1.0.3",
     "iron-input": "PolymerElements/iron-input#~1.0.6",
+    "iron-list": "PolymerElements/iron-list#~1.1.2",
     "iron-pages": "PolymerElements/iron-pages#~1.0.3",
     "paper-button": "PolymerElements/paper-button#~1.0.6",
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#~1.0.2",
@@ -28,6 +30,7 @@
     "paper-input": "PolymerElements/paper-input#~1.0.14",
     "paper-item": "PolymerElements/paper-item#~1.0.3",
     "paper-menu": "PolymerElements/paper-menu#~1.1.0",
+    "paper-ripple": "PolymerElements/paper-ripple#~1.0.2",
     "paper-tabs": "PolymerElements/paper-tabs#~1.0.3",
     "paper-toolbar": "PolymerElements/paper-toolbar#~1.0.4",
     "polymer": "Polymer/polymer#^1.1.0"
